Added Passport logins and product search page

--- a/app/static/css/style.less
+++ b/app/static/css/style.less
@@ -1,6 +1,16 @@
 @base: #f938ab;
 
 body{
-  background-color: saturate(@base, 5%);
+  background-image: url(/img/back.png);
+}
+
+li {
+  margin-right: 45px;
+}
+
+.photo {
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
