--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,1 @@
-body{background-color:#fe33ac}
+body{background-image:url(/img/back.png)}li{margin-right:45px}.photo{height:100px;background-size:contain;background-repeat:no-repeat}
